# gitlab-mr-board

./: Cargo.toml  index.html  style.css
src/: lib.rs
src/components/: list.rs  mod.rs  tab.rs  tab_switcher.rs
src/components/helpers/: class_helpers.rs  mod.rs
src/enums/: selection.rs
src/services/: gitlab.rs
