[package]
name = "gitlab_mr_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"]  }
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde-wasm-bindgen = "0.6.1"

[dependencies.web-sys]
version = "0.3.5"
features = [
  'Document',
  'Location',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'MouseEvent',
  'HtmlCollection',
  'NodeList',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  ]
